2005-08-11  Erez Zadok  <ezk@cs.sunysb.edu>

	* configure.in: keep AC_INIT on same line, for nightly snapshot
	build script.

	* amd/Makefile.am: f/lex libraries are incompatible with multiple
	scanners, so don't link Amd with libl.a/libfl.a.

2005-08-10  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/sun_map_tok.l: Clean up regular expression so HPUX stops
	whining.

2005-08-09  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/sun_map_parse.y: Moved license below special yacc bracket to
	be portable with HPUX's yacc.  Clean up externs.

	* amd/sun_map_tok.l: Moved license below special lex bracket to be
	portable with HPUX's lex.  Fixed definitions to allow for a
	non-flex lex to parse strings instead of files.  Added some casts
	to strlcpy usage to silence warnings.  Moved the % options because
	HPUX was complaining,

2005-08-08  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>

	* amd/sun_map_tok.l: Applied some definition goop to handle the
	ECHO symbol that lex defines.  This symbol causes problems on
	RedHat-EL-powerPC platforms.  Replaced strncpy with strlcpy.
	Renamed the function sun_map_yyinput to sun_map_input.  This
	function is a utility function that is not generated by lex.
	Therefore, the 'yy' may cause confusion.

2005-08-08  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/sun_map_tok.l: allocate more output slots so lex scanners
	don't run out of memory.

	* amd/sun_map_parse.y: declare extern for sun_map_parse().

	* libamu/xutil.c (xsnprintf): ensure proper comparisons between
	signed and unsigned quantities.

2005-08-06  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/util.c, amd/autil.c (strsplit): moved strsplit() function
	from Amd code to to libamu, so sun2amd could use it.

	* amd/Makefile.am (sbin_PROGRAMS): build sun2amd binary and man
	page.
	(EXTRA_sun2amd_OBJECTS): sun2amd needs to link with all info_*.c files

	* amd/sun2amd.8: placeholder for man page.

	* amd/sun2amd.c: placeholder for C version of translator from Sun