@@ -50,141 +50,6 @@
 #include <sun_map.h>
 
 
-/*
- * Allocate a sun_mmap struct.
- *
- * return - sun_amap* on success, NULL no memory
- */
-struct sun_mmap *
-sun_mmap_alloc(void)
-{
-  struct sun_mmap *retval;
-
-  retval = (struct sun_mmap *) xmalloc(sizeof(struct sun_mmap));
-  memset(retval, 0, sizeof(struct sun_mmap));
-
-  return retval;
-}
-
-
-/*
- * Allocate a sun_map struct.
- *
- * return - sun_map* on success, NULL no memory
- */
-struct sun_map *
-sun_map_alloc(void)
-{
-  struct sun_map *retval;
-
-  retval = (struct sun_map *) xmalloc(sizeof(struct sun_map));
-  memset(retval, 0, sizeof(struct sun_map));
-
-  return retval;
-}
-
-
-/*
- * Allocate a sun_entry struct.
- *
- * return - sun_entry* on success, NULL no memory
- */
-struct sun_entry *
-sun_entry_alloc(void)
-{
-  struct sun_entry *retval;
-
-  retval = (struct sun_entry *) xmalloc(sizeof(struct sun_entry));
-  memset(retval, 0, sizeof(struct sun_entry));
-
-  return retval;
-}
-
-
-/*
- * Allocate a sun_mountpt
- *
- * return - sun_mountpt* on success, NULL no memory
- */
-struct sun_mountpt *
-sun_mountpt_alloc(void)
-{
-  struct sun_mountpt *retval;
-
-  retval = (struct sun_mountpt *) xmalloc(sizeof(struct sun_mountpt));
-  memset(retval, 0, sizeof(struct sun_mountpt));
-
-  return retval;
-}
-
-
-/*
- * Allocate a sun_location struct.
- *
- * return sun_location* on sucess, NULL no memory
- */
-struct sun_location *
-sun_location_alloc(void)
-{
-  struct sun_location *retval;
-
-  retval = (struct sun_location *) xmalloc(sizeof(struct sun_location));
-  memset(retval, 0, sizeof(struct sun_location));
-
-  return retval;
-}
-
-
-/*
- * Allocate a sun_host struct.
- *
- * return sun_host* on sucess, NULL no memory
- */
-struct sun_host *
-sun_host_alloc(void)
-{
-  struct sun_host *retval;
-  retval = (struct sun_host *) xmalloc(sizeof(struct sun_host));
-
-  memset(retval, 0, sizeof(struct sun_host));
-
-  return retval;
-}
-
-
-/*
- * Allocate a sun_opt struct.
- *
- * return sun_opt* on sucess, NULL no memory
- */
-struct sun_opt *
-sun_opt_alloc(void)
-{
-  struct sun_opt *retval;
-
-  retval = (struct sun_opt *) xmalloc(sizeof(struct sun_opt));
-  memset(retval, 0, sizeof(struct sun_opt));
-
-  return retval;
-}
-
-
-/*
- * Allocate a sun_list struct.
- *
- * return sun_list* on sucess, NULL no memory
- */
-struct sun_list *
-sun_list_alloc(void)
-{
-  struct sun_list *retval;
-
-  retval = (struct sun_list *) xmalloc(sizeof(struct sun_list));
-  memset(retval, 0, sizeof(struct sun_list));
-
-  return retval;
-}
-
 
 /*
  * Add a data pointer to the end of the list.
@@ -360,7 +225,7 @@ sun_entry2amd(const char *a_entry)
     }
   }
   else {
-    plog(XLOG_INFO,"No SUN fstype specified defaulting to NFS.");
+    plog(XLOG_INFO, "No SUN fstype specified defaulting to NFS.");
   }
 
 
